--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -7,3 +7,7 @@ WORKDIR /srv/app
 
 RUN docker-php-ext-install mysqli \
     && chown -R www-data:www-data /srv/app
+RUN apt-get clean && apt-get update && \
+    apt-get install --fix-missing -y \
+    libyaml-dev
+RUN pecl install yaml-2.0.0 && docker-php-ext-enable yaml
