--- a/public/config.yml
+++ b/public/config.yml
@@ -3,3 +3,17 @@ database:
   name: planingdb
   user: root
   password: password
+cards:
+- 0
+- 0.5
+- 1
+- 2
+- 3
+- 5
+- 8
+- 13
+- 20
+- 40
+- 100
+- '?'
+- Coffee
